[tool.poetry]
name = "elk-pet"
version = "0.1.0"
description = ""
authors = ["German Goltsov <9150654-GerGoltz@users.noreply.gitlab.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
pydantic = "^1.9.0"
fake-useragent = "^0.1.11"
fastapi = "^0.78.0"
uvicorn = "^0.17.5"
loguru = "^0.6.0"
backoff = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
